40% Testing Coverage of Backend